welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:5: error: '(' expected but identifier found.
    if a<b {
       ^maxMod5:8: error: illegal start of simple expression
    }
    ^